# IntroToComputerVision

./: .clang-format  .gitattributes  .github-todos  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Docker/: Dockerfile  build.sh  run.sh
Docker/konsole/: nvidia.profile
ProblemSets/: CMakeLists.txt
ProblemSets/ps0_cpp/: CMakeLists.txt  main.cpp  ps0.md
ProblemSets/ps1_cpp/: CMakeLists.txt  ps1.md
ProblemSets/ps1_cpp/src/: Config.cpp  Config.h  Convolution.cu  Convolution.h  Hough.cu  Hough.h  Solution.cpp  Solution.h  main.cpp
ProblemSets/ps2_cpp/: CMakeLists.txt  README.md  ps2.md
ProblemSets/ps2_cpp/include/: Config.h  DisparityNCorr.h  DisparitySSD.h
ProblemSets/ps2_cpp/lib/: Config.cpp  DisparityNCorr.cpp  DisparityNCorr.cu  DisparitySSD.cpp  DisparitySSD.cu
ProblemSets/ps2_cpp/src/: main.cpp
ProblemSets/ps3_cpp/: CMakeLists.txt  README.md
ProblemSets/ps3_cpp/include/: Calibration.h  Config.h  FParse.h  Fundamental.h
ProblemSets/ps3_cpp/lib/: Calibration.cpp  Config.cpp  FParse.cpp  Fundamental.cpp
ProblemSets/ps3_cpp/src/: Solution.cpp  Solution.h  main.cpp
ProblemSets/ps4_cpp/: CMakeLists.txt  README.md
ProblemSets/ps4_cpp/include/: Config.h  Descriptors.h  Harris.h  RANSAC.h
ProblemSets/ps4_cpp/lib/: Config.cpp  Descriptors.cpp  Harris.cpp  Harris.cu  RANSAC.cpp
ProblemSets/ps4_cpp/src/: Solution.cpp  Solution.h  main.cpp
ProblemSets/ps5_cpp/: CMakeLists.txt  README.md
ProblemSets/ps5_cpp/include/: Config.h  OpticalFlow.h  Pyramids.h
ProblemSets/ps5_cpp/lib/: Config.cpp  OpticalFlow.cpp  Pyramids.cpp  Pyramids.cu
ProblemSets/ps5_cpp/src/: Solution.cpp  Solution.h  main.cpp
ProblemSets/ps6_cpp/: CMakeLists.txt  README.md
ProblemSets/ps6_cpp/include/: Config.h  ParticleFilter.h
ProblemSets/ps6_cpp/lib/: Config.cpp  ParticleFilter.cpp
ProblemSets/ps6_cpp/src/: Solution.cpp  Solution.h  main.cpp
ProblemSets/ps7_cpp/: CMakeLists.txt  README.md
ProblemSets/ps7_cpp/include/: Config.h  Matching.h  Moments.h  MotionHistory.h
ProblemSets/ps7_cpp/lib/: Config.cpp  Matching.cpp  Moments.cpp  MotionHistory.cpp  MotionHistory.cu
ProblemSets/ps7_cpp/src/: Solution.cpp  Solution.h  main.cpp
Resources/ProblemSet6/: noisy_debate.avi  pedestrians.avi  pres_debate.avi
Resources/ProblemSet7/: PS7A1P1T1.avi  PS7A1P1T2.avi  PS7A1P1T3.avi  PS7A1P2T1.avi  PS7A1P2T2.avi  PS7A1P2T3.avi  PS7A1P3T1.avi  PS7A1P3T2.avi  PS7A1P3T3.avi  PS7A2P1T1.avi  PS7A2P1T2.avi  PS7A2P1T3.avi  PS7A2P2T1.avi  PS7A2P2T2.avi  PS7A2P2T3.avi  PS7A2P3T1.avi  PS7A2P3T2.avi  PS7A2P3T3.avi  PS7A3P1T1.avi  PS7A3P1T2.avi  PS7A3P1T3.avi  PS7A3P2T1.avi  PS7A3P2T2.avi  PS7A3P2T3.avi  PS7A3P3T1.avi  PS7A3P3T2.avi  PS7A3P3T3.avi  TestLabel1.avi  TestLabel2.avi
Resources/Wikimedia/: README.md
common/: CMakeLists.txt
common/common/: utils.cuh
common/include/common/: BasicConfig.h  CudaCommon.cuh  CudaWarmup.h  GpuTimer.h  OpenCVThrustInterop.h  Utils.h  make_unique.h
common/src/: CudaWarmup.cu  GpuTimer.cpp  Utils.cpp
config/: cannyEdgeDetect.yaml  ps0.yaml  ps1.yaml  ps2.yaml  ps3.yaml  ps4.yaml  ps5.yaml  ps6.yaml  ps7.yaml
explore/: CMakeLists.txt  README.md
explore/canny/: CMakeLists.txt  CannyEdgeDetect.cpp  Convolution.cu  ConvolutionSeparable.cu  ConvolutionSeparableCommon.h
